# cinefolders

./: .bumpversion.cfg  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  apikey.ini.save  apikeybackup.txt  bump-publish.sh  setup.py
.circleci/: config.yml
cinefolders/: __init__.py  __main__.py  cinefolders.py  organizer.py
cinefolders/tmdb/: episode.py  movie.py  tmdb.py
dev/: bump-publish.sh  cli_test.py  fake_key.txt  git-template.txt  notes.md  simple_run.py  tmdb_curl.sh  zshoptions.zsh
src/: cli.yaml  config.rs  driver.rs  fileoperations.rs  lib.rs  logger.rs  main.rs  test.rs  tmdb.rs
src/cinefolders/: __init__.py  __main__.py  export.py  filepathtree.py  organizer.py  searcher.py  videoid.py
src/cinefolders/tmdb/: episode.py  item.py  movie.py  season.py  tmdb.py
src/tmdb/: api.rs  definitions.rs  objects.rs  parsing.rs
tests/: main.rs  test_organizer.py
